# ot-harjoitustyo

./: .gitignore  README.md
Sports-Rally/: .gitignore  pyproject.toml  tasks.py
Sports-Rally/src/: Pong_0.py  Pong_1.py  longjump.py  main.py  pong_main.py  pong_practice.py  pong_pvp.py
Sports-Rally/src/classes/: SoundManager.py  menu_class.py  pong_class.py
Sports-Rally/src/longjump/: longjump.py  longjump_leaderboard.py  longjump_main.py
Sports-Rally/src/menu/: __init__.py  menu_class.py
Sports-Rally/src/pong/: pong_main.py  pong_practice.py  pong_pvp.py  pongclass.py
Sports-Rally/src/resources/: leaderboard.csv
Sports-Rally/src/tests/: test_lj.py  test_longjump.py  test_menu.py  test_pong.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  testaus.mdq  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .coverage
laskarit/viikko2/unicafe/src/: kassapaate.py
laskarit/viikko2/unicafe/src/tests/: maksukortti_test.py  kassapaate_test.py
poetry-testi/: pyproject.toml
