[tool.poetry]
name = "sports-rally"
version = "0.1.0"
description = ""
authors = ["Kirin Pörsti <kirin.porsti@helsinki.fi>"]
readme = "README.md"
packages = [{include = "sports_rally"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.2"
coverage = "^7.2.2"
pygame = "^2.3.0"
invoke = "^2.0.0"
pylint = "^2.17.2"
autopep8 = "^2.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
coverage = "^7.2.2"
pygame = "^2.3.0"
invoke = "^2.0.0"
pylint = "^2.17.2"
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
